<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_toggle_theme"
        android:icon="@drawable/ic_theme_light"
        android:title="@string/toggle_theme" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort">
        <menu>
            <group android:id="@+id/group_sort" android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/sort_by_name" />
                <item
                    android:id="@+id/action_sort_date"
                    android:title="@string/sort_by_date" />
                <item
                    android:id="@+id/action_sort_size"
                    android:title="@string/sort_by_size" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_signature"
        android:icon="@drawable/ic_signature"
        android:title="@string/signature" />
    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_language"
        android:title="@string/language">
        <menu>
            <group android:id="@+id/group_language" android:checkableBehavior="single">
                <item android:id="@+id/action_lang_ru" android:title="@string/lang_ru" />
                <item android:id="@+id/action_lang_en" android:title="@string/lang_en" />
                <item android:id="@+id/action_lang_bg" android:title="@string/lang_bg" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_save_folder"
        android:icon="@drawable/ic_folder"
        android:title="@string/save_folder">
        <menu>
            <item android:id="@+id/action_choose_folder" android:title="@string/choose_folder" />
            <item android:id="@+id/action_default_folder" android:title="@string/default_folder" />
        </menu>
    </item>
</menu>
